[eme] Reject CDM calls after connection error

Once the mojo connection is broken, all subsequent calls to the CDM
should fail.

BUG=671362
TEST=new tests pass

Review-Url: https://codereview.chromium.org/2561263002
Cr-Commit-Position: refs/heads/master@{#439032}

Former-commit-id: 8ef30a35f16fe89ee4b4f8d9ea15d5bbcf7dc9cf